# rri

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RRI.pro  biqmap.cpp  biqmap.h  config.pri  constants.h  core.cpp  core.h  distribute.sh  mainwindow.cpp  mainwindow.ui  microscopicmodel.h  options.pri  rrimodel.cpp  rrimodel.h  rriobject.cpp  rriobject.h
.packaging/: install  version
.packaging/marenostrum/: deploy  settings
.packaging/minotauro/: deploy  module  push  settings  version
R/: qualities.R  rri.R
cfg/: win-rri.cfg
samples/: nemo-cluster1.callerdata  nemo.exe.128tasks.chop1.clustered.pcf
samples/nemo.exe.128tasks.chop1.clustered.folding/: folding-paraver-alienapp-launcher.bash  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.Cluster_10.callerdata  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.Cluster_11.callerdata  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.Cluster_2.callerdata  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.Cluster_4.callerdata  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.Cluster_5.callerdata  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.Cluster_6.callerdata  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.Cluster_7.callerdata  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.Cluster_8.callerdata  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.Cluster_9.callerdata  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_BR_CN.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_BR_MSP.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_BR_UCN.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_FP_INS.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_L1_DCM.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_L2_DCM.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_L3_TCM.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_LD_INS.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_SR_INS.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_TOT_CYC.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_TOT_INS.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_VEC_DP.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.PAPI_VEC_SP.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.RESOURCE_STALLS.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.RESOURCE_STALLS:LB.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.RESOURCE_STALLS:ROB.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.RESOURCE_STALLS:RS.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.RESOURCE_STALLS:SB.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.Group_0.ratio_per_instruction.gnuplot  nemo.exe.128tasks.chop1.clustered.codeblocks.fused.any.any.any.Cluster_1.groups.gnuplot  (+211 more)
scripts/: .rri.R.swo  rri  rri-alya  rri-alya.R  rri-auto  rri-fds  rri-fds-profiling  rri-fds-profiling.R  rri-fds.R  rri-folding  rri-folding-alya  rri-folding-alya.R  rri-folding-fds  rri-folding-fds.R  rri-folding-nemo  rri-folding-nemo.R  rri-folding.R  rri-gnuplot  rri-install.R  rri-nemo  rri-nemo.R  rri-pdf  rri-profiling  rri-profiling.R  rri-visualize  rri-visualize.R  rri.R  rri.sh
src/: CMakeLists.txt  src.pro
src/rri-bin/: CMakeLists.txt  RRI-bin.pro
src/rri-bin/headers/: argumentmanager.h  filemanager.h  streamset.h
src/rri-bin/sources/: filemanager.cpp  rri.cpp
src/rri-csv/: CMakeLists.txt
src/rri-csv/headers/: rricsv.h
src/rri-profiling/: CMakeLists.txt
src/rri-profiling/headers/: profiling_constants.h  rriprofiling.h  slopeparser.h
src/rri-profiling/sources/: rriprofiling.cpp  slope.cpp  statsparser.cpp
(+119 files in other folders)
